[project]
name = "lens"
version = "0.1.0"
description = "Mechanistic interpretability CLI tool - logit lens, neuron discovery, steering"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "nnsight>=0.3",
    "typer[all]>=0.12",
    "rich>=13.0",
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
lens = "lens.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"
